<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".ActivityAjouter">

    <EditText
        android:id="@+id/et_country"
        android:layout_width="406dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/et_country"
        android:inputType="textPersonName"
        android:textColor="@color/Orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nomComplet" />

    <EditText
        android:id="@+id/et_nomComplet"
        android:layout_width="411dp"
        android:layout_height="49dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/et_nomComplet"
        android:inputType="textPersonName"
        android:textColor="@color/Orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_saveInfo" />

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="413dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/et_gender"
        android:inputType="textPersonName"
        android:textColor="@color/Orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_birthDate" />

    <EditText
        android:id="@+id/et_birthDate"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/et_birthDate"
        android:inputType="time"
        android:textColor="@color/Orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_country" />

    <TextView
        android:id="@+id/tv_saveInfo"
        android:layout_width="224dp"
        android:layout_height="33dp"
        android:layout_marginTop="44dp"
        android:text="@string/tv_saveInfo"
        android:textColor="@color/Orange"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sauvegarde"
        android:layout_width="407dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/Orange"
        android:text="@string/btn_sauvegarde"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_gender" />
</androidx.constraintlayout.widget.ConstraintLayout>
