<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".ActivityGestionBd">

    <TextView
        android:id="@+id/tv_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/tv_titre"
        android:textColor="@color/purple_200"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_deconnexion"
        android:layout_width="411dp"
        android:layout_height="48dp"
        android:layout_marginTop="136dp"
        android:backgroundTint="@color/purple_400"
        android:onClick="logout"
        android:text="@string/btn_deconnexion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titre" />

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="411dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/purple_400"
        android:text="@string/btn_setting"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_deconnexion" />

    <TextView
        android:id="@+id/tv_titre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_titre1"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btn_deconnexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titre"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/btn_ouvrirAjouter"
        android:layout_width="412dp"
        android:layout_height="53dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/purple_400"
        android:text="@string/btn_ouvrirAjouter"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_setting" />

    <Button
        android:id="@+id/btn_ouvrirAfficher"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/purple_400"
        android:text="@string/btn_ouvrirAfficher"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ouvrirAjouter" />

</androidx.constraintlayout.widget.ConstraintLayout>
